more ascension path changes

--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1060,6 +1060,19 @@
 	trait_tec_cyborg_research_desc:0 "§La.§!"
  # /
  # Misc text
+	tec_cybernetic_augments:0 "Cybernetic Augmentations"
+	tec_cybernetic_augments_desc:0 "TODO ASCENSION"
+	tec_cybernetic_augments_cat_mainframe:0 "Mainframe Augmentation"
+	tec_cybernetic_augments_cat_mainframe_desc:0 "A set of enhancements grafted to the body serving as the support and frame to other implants and greatly improving the species capabilities."
+	tec_cybernetic_augments_cat_cortex:0 "Cortex Augmentation"
+	tec_cybernetic_augments_cat_cortex_desc:0 "Serving as direct replacement of entire regions of the species brain, these implants act as co-processors"
+	tec_cybernetic_augments_cat_internal:0 "Internal Augmentation"
+	tec_cybernetic_augments_cat_internal_desc:0 "These cybernetic implants are direct substitution of internal organs and structures, or alter the internal physionomy of the species."
+	tec_cybernetic_augments_cat_external:0 "External Augmentation"
+	tec_cybernetic_augments_cat_external_desc:0 "Applied to the body, grafted to the exterior of the species, these cybernetic implants enhance the capacities with extra layers, tools or extremities."
+	tec_cybernetic_augments_cat_deck:0 "OS Deck Augmentation"
+	tec_cybernetic_augments_cat_deck_desc:0 "Dedicated software and hardware interconnecting other cybernetic implants ensure efficiency or change in operativity."
+
 	tec_cybernetic_augmentation:0 "§CCybernetic Augmentation§!"
 	tec_cybernetic_augmentation_mainframe:0 "§CCybernetic Augmentation - Mainframe§!"
 	tec_cybernetic_augmentation_cortex:0 "§CCybernetic Augmentation - Cortex§!"
