--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -71,10 +71,12 @@
 # ------------------------------------------------- Synchronicity
 	tr_synchronicity_finish_desc:2 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YBalance§! will be available.§!\n"
 	tr_synchronicity_machine_finish_desc:2 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!\n§HUnlocks Edict:§! $edict_industrial_maintenance$.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YBalance§! will be available.§!\n"
+# /
 
 # ------------------------------------------------- Unyielding
 	tr_unyielding_fortress_doctrine_nemesis:4 "$tr_unyielding_fortress_doctrine$"
 	tr_unyielding_finish_tooltip:4 "Defense Platforms Cap: §G+50%§!.\nStarbase Upkeep: §G-20%§!.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YMight§! will be available.§!\n"
+# /
 
 # ------------------------------------------------- Versatility
 	tr_versatility_adopt_tooltip:0 "Machine Species Modification Points: §G+2§!."
@@ -84,10 +86,12 @@
 	tr_versatility_finish_tooltip:0 "Pop Assembly speed: §G+10%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YStatecraft§! will be available.§!\n"
 
 	tr_versatility_spatial_optimization_tooltip:0 "£building£ §YCapital Buildings§! provide the planet with §G+5%§! £housing£ Housing, up to §G+20%§!."
+# /
 
 # ------------------------------------------------- Aptitude
 	# REMOVED
 	#tr_aptitude_champions_of_the_empire_desc:1 "Per $commander_with_icon$ level\n$t$$MOD_COUNTRY_NAVAL_CAP_ADD$: §G+2§!\nPer $governor_with_icon$ level\n$t$$tec_loc_admin_cap$: §G+1§!\nPer $scientist_with_icon$ level\n$t$$MOD_LEADER_SPECIES_EXP_GAIN$: §G+0.5%§!"
+# /
 
 # Psionic
 # ------------------------------------------------------------
@@ -120,6 +124,7 @@
 
 	tr_psionics_shrouded_encryption:0 "Shrouded Communications"
 	tr_psionics_shrouded_encryption_tooltip:0 "Gains §G+10§! base Intel.\nGrants the £edict£ §MSight Beyond Sight§M Edict."
+# /
 
 # Genetic
 # ------------------------------------------------------------
@@ -127,28 +132,26 @@
 	tradition_tec_vanilla_genetics_desc:0 "Natural evolution was always shaped by a single, crude tool: failure. Only now may we define success."
 
 	tr_genetics_adopt:0 "Genetic Traditions"
-	#  tr_genetics_adopt_tooltip:7 "Organic Species Modification Points: §G+3§!."
 
 	tr_genetics_finish:0 "Genetic Traditions Finished"
-	#  tr_genetics_finish_tooltip:4 "Organic Species Modification Points: §G+3§!\n\n$TRADITIONS_FINISH_AP$"
+
 	tr_genetics_finish_extra_traits:0 "$tr_genetics_finish$"
-	tr_genetics_finish_extra_traits_tooltip:0 "Allows research of rare §YTransgenesis§! technologies."
+	tr_genetics_finish_extra_traits_tooltip:1 "Allows research of rare §YTransgenesis§! technologies\n$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-25%§!\n$TRADITIONS_FINISH_AP$"
 
 	tr_genetics_resequencing:0 "Genetic Resequencing"
 	tr_genetics_resequencing_tooltip:0 "Can §YAdd§! Negative traits to Organic Species.\nCan §YRemove§! beneficial traits from Organic Species"
 
 	tr_genetics_creation:0 "Engineered Genesis"
-	tr_genetics_creation_tooltip:0 "Unlocks §YAdvanced§! Traits for Species Modification.\nAllows the Assimilation of Pops into or out of a §YHive-Mind§!."
+	tr_genetics_creation_tooltip:0 "Can §YAlter§! Pop §YAppearance§! with Species Modification.\nAllows the Assimilation of Pops into or out of a §YHive-Mind§!."
 
 	tr_genetics_enhanced_expression:0 "Allelic Expression"
-	tr_genetics_enhanced_expression_tooltip:0 "Can §YAlter§! Pop §YAppearance§! with Species Modification."
+	tr_genetics_enhanced_expression_tooltip:1 "Unlocks §YAdvanced§! Traits for Species Modification"
 
 	tr_genetics_efficient_cloning:0 "Stem Cell Stimulation"
-	tr_genetics_efficient_cloning_tooltip:0 "§Y$tec_loc_organic_assembly$§! increased by §G5%§! per $tec_loc_capital_tier$.\nThis effect is increased per §Y$tec_loc_planet_ascension$§!."
-	# 3.12 - "£building£ §YCloning Buildings§! replace their passive biological assembly and jobs with a single §YMaster Cloner§! job, which provide dynamic and additional £mod_pop_growth_speed£ §YOrganic Pop Assembly§! and £society£ §YSociety§! Research based on the building tier, and a moderate amount of §Y$tec_loc_unity$§!."
-	# 3.9 - "£job_tec_cloner£ Cloner jobs produce 1 extra §Y$tec_loc_organic_assembly$§!"
+	tr_genetics_efficient_cloning_tooltip:0 "§Y$tec_loc_capitals$§! increase §Y$tec_loc_organic_assembly$§! by §G5%§! per $tec_loc_capital_tier$.\nThis effect is increased per §Y$tec_loc_planet_ascension$§! (§G+2.5%§! per)."
 
 	tr_genetics_retrovirus:0 "Retroviral Manipulation"
+# /
 
 # Cybernetics
 # ------------------------------------------------------------
@@ -157,32 +160,62 @@
 
 	tr_cybernetics_adopt:0 "Cybernetics Traditions"
 	tr_cybernetics_adopt_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§!.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! and £society£ §YSociety§! research during and after the process."
+	tr_cybernetics_adopt_utopia_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§!.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! and £society£ §YSociety§! research during and after the process."
 	tr_cybernetics_adopt_hive_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§! of the collective.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! and £society£ §YSociety§! research during and after the process."
+	tr_cybernetics_adopt_hive_utopia_tooltip:7 "Allows the §YAssimilation§! of Organic pops into §HCyborgs§! of the collective.\nPops undergoing §HCybernetic Assimilation§! provide additional £engineering£ §YEngineering§! and £society£ §YSociety§! research during and after the process."
 
 	tr_cybernetics_finish:0 "Cybernetics Traditions Finished"
 	tr_cybernetics_finish_tooltip:4 "Organic Species Trait Picks: §G+1§!\nSynthetic Species Trait Picks: §G+1§!\nAscension Perks Unlocked: §G+1§!"
 
 	tr_cybernetics_transubstantiation_synthesis:0 "Transubstantiation Synthesis"
-	tr_cybernetics_organ_harvesting_tooltip:0 "Planets with ongoing §YPurges§! gain §G+25%§! £mod_pop_growth_speed£ Pop Assembly Speed." # TODO After AUG-28923/MR!4802 create new purge type
+	tr_cybernetics_transubstantiation_synthesis_delayed:0 "The new world has no room for those not infused with the machine."
+	tr_cybernetics_transubstantiation_synthesis_tooltip:0 "§Y$tec_loc_capitals$§! increase §Y$mod_planet_jobs_tec_cybernetics_produces_mult$§! by §G3%§! per $tec_loc_capital_tier$.\nThis effect is increased per §Y$tec_loc_planet_ascension$§! (§G+1.5%§! per)."
+
+	tr_cybernetics_organ_harvesting_delayed:0 "Those deemed unsuitable are granted purpose only once recycled."
+	tr_cybernetics_organ_harvesting_tooltip:0 "$tr_cybernetics_transubstantiation_synthesis_tooltip$\nPlanets with ongoing §YPurges§! gain §G+25%§! £mod_pop_growth_speed£ Pop Assembly Speed."
 
 	tr_cybernetics_metabolic_reprocessing:0 "Metabolic Reprocessing"
 	tr_cybernetics_metabolic_reprocessing_tooltip:0 "Empire Size from Cyborg Pops: §G-10%§!"
 
 	tr_cybernetics_integrated_anatomy:0 "Integrated Anatomy"
-	tr_cybernetics_integrated_anatomy_tooltip:0 "Organic Species Trait Picks: §G+1§!\nAllow the modification of Cyborg pops and Robots with §YCybernetic traits§!, §YCyber-Frames§! and §YMachine Integration Traits§!.\n\nCybernetic traits provide alternative bonuses to organic traits while increasing the species §Y$tec_loc_energy$§! Upkeep, and are further amplified by the unique Cybernetic Frames, which are Endo/Exoskeletons.\nMachine Integration Traits can be combined with Organic or Cybernetic traits, but incur in high additional $tec_loc_energy$ Upkeep."
+	tr_cybernetics_integrated_anatomy_tooltip:0 "Organic Species Trait Picks: §G+2§!\nAllow the modification of Cyborg pops and Robots with §YCybernetic traits§!, §YCyber-Frames§! and §YMachine Integration Traits§!.\n\nCybernetic traits provide alternative bonuses to organic traits while increasing the species §Y$tec_loc_energy$§! Upkeep, and are further amplified by the unique Cybernetic Frames, which are Endo/Exoskeletons.\nMachine Integration Traits can be combined with Organic or Cybernetic traits, but incur in high additional $tec_loc_energy$ Upkeep."
+	tr_cybernetics_integrated_anatomy_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_integrated_anatomy_tooltip$$mod_BIOLOGICAL_species_trait_picks_add$: §G+2§!"
 
-	tr_cybernetics_assembly_standards:0 "Mechadendrital Crucible"
-	tr_cybernetics_assembly_standards_tooltip:0 "£building£ §YMechanical Assembly Buildings§! replace their passive mechanical assembly and jobs with a single §YMaster Assembler§! job, which provide dynamic and additional £job_roboticist£ §YAssembly§! and §Y$tec_loc_engineering$§! based on the building tier, and a moderate amount of §Y$tec_loc_amenities$§!.\nAllows the assembly of Cyborg pops on Mechanical Assembly Buildings."
+	old_tr_cybernetics_assembly_standards:0 "Mechadendrital Crucible"
+	old_tr_cybernetics_assembly_standards_tooltip:0 "£building£ §YMechanical Assembly Buildings§! replace their passive mechanical assembly and jobs with a single §YMaster Assembler§! job, which provide dynamic and additional £job_roboticist£ §YAssembly§! and §Y$tec_loc_engineering$§! based on the building tier, and a moderate amount of §Y$tec_loc_amenities$§!.\nAllows the assembly of Cyborg pops on Mechanical Assembly Buildings."
 	#Unlocks £building£ §YMechadendrite Synthetizers§!.\n£building£ Mechadendrite Synthetizers replace standard assembly buildings, and assemble both £mod_planet_pop_assembly_mult£ Organic and £job_roboticist£ Robotic species without the need of jobs.\n\nGain access to Crucible Worlds.\nCrucible Worlds are a special type of colony designation which gives massive Pop Assembly bonuses.
+
+	tr_cybernetics_augmentation_overload: "Augmentation Overload"
+	tr_cybernetics_augmentation_overload_delayed: "The only way to keep up with people's demand for implants are more $job_augmentor_plural$."
+	tr_cybernetics_augmentation_overload_desc: "$job_augmentor_plural_with_icon$ per $building_augmentation_center$: §G+2§!"
+	tr_cybernetics_augmentation_centers: "Augmentation Centers"
+	tr_cybernetics_augmentation_centers_desc: "§YUnlocks Building:§! $building_augmentation_center$"
+	tr_cybernetics_augmentation_centers_delayed: "The $building_augmentation_center$ is a hub for cybernetic implantation. Part shopping mall, part operating center, and part mechanic shop."
+	tr_cybernetics_augmentation_overload_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_augmentation_overload_desc$"
+
+	tr_cybernetics_synaptic_sub_processing:0 "$tr_cybernetics_augmentation_overload$"
+	tr_cybernetics_synaptic_sub_processing_situation: "$tr_cybernetics_augmentation_overload$"
+	tr_cybernetics_synaptic_sub_processing_delayed:0 "Complete adaptation of our drones is mandatory, central hubs and and capitals will ensure it with impeccable efficiency."
+	tr_cybernetics_synaptic_sub_processing_tooltip:0 "§Y$tec_loc_capitals$§! provide §G+1§! £job_augmentor_drone£ §Y$job_augmentor_drone$§! Jobs each two tiers."
+	tr_cybernetics_synaptic_sub_processing_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_synaptic_sub_processing_tooltip$"
 
 	tr_cybernetics_assembly_standards_assimilators:0 "Crucible Worlds"
 	tr_cybernetics_assembly_standards_assimilators_desc:0 ""
 
 	tr_cybernetics_modular_cybernetics:0 "Modular Cybernetics"
 	tr_cybernetics_modular_cybernetics_tooltip:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$tr_cybernetics_modular_cybernetics_tt$"
+	tr_cybernetics_modular_cybernetics_tt:1 "§Y$mod_ROBOT_species_trait_points_add$§! and §Y$mod_ROBOT_species_trait_picks_add$§! also apply to Organic species."
+	tr_cybernetics_modular_cybernetics_hive_tt:0 "$tr_cybernetics_modular_cybernetics_tooltip$"
+	tr_cybernetics_modular_cybernetics_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_modular_cybernetics_tt_2$"
+	tr_cybernetics_modular_cybernetics_hive_situation_effects: "$tr_cybernetics_situation$$tr_cybernetics_modular_cybernetics_hive_tt$"
 	tr_cybernetics_modular_cybernetics_machine:0 "$tr_cybernetics_modular_cybernetics$"
 	tr_cybernetics_modular_cybernetics_machine_tooltip:0 "$MOD_COUNTRY_MODIFY_SPECIES_COST_MULT$: §G-50%§!\n$tr_cybernetics_assimilator_modular_cybernetics_tt$"
 	tr_cybernetics_modular_cybernetics_machine_delayed:0 "$tr_cybernetics_modular_cybernetics_delayed$"
+
+	tr_cybernetics_assimilator_finish:0 "Cybernetic Traditions Finished"
+	tr_cybernetics_assimilator_finish_tooltip:0 "$tr_cybernetics_transubstantiation_synthesis_tooltip$\n$TRADITIONS_FINISH_AP$"
+
+# /
 
 # Synthetic
 # ------------------------------------------------------------
@@ -190,7 +223,9 @@
 	tradition_tec_vanilla_synthetics_desc:0 "Future is crafted from bolt to bolt, from circuit to circuit, and from data to data, all by our hand and innovation."
 
 	tr_synthetics_adopt:0 "Synthetics Traditions"
-	tr_synthetics_adopt_tooltip:7 "Allows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional §Y$tec_loc_unity$§! during and after the process."
+	tr_synthetics_adopt_evolved_machineage_tooltip:0 "Allows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional §Y$tec_loc_unity$§! during and after the process."
+	tr_synthetics_adopt_evolved_utopia_tooltip:0 "Allows the assimilation of any Organic or Mechanical species into new Synthetic platforms.\nPops undergoing §HAssimilation§! provide additional §Y$tec_loc_unity$§! during and after the process."
+	tr_synthetics_adopt_machine_tooltip:0 "TODO ASCENSION"
 
 	tr_synthetics_finish:0 "Synthetics Traditions Finished"
 	tr_synthetics_finish_tooltip:4 "£building£ Capitals provide §G+2§! extra £job_roboticist£ Passive Assembly."
