--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -31,6 +31,8 @@
 	tec_loc_desc_separator: "-----------"
 	tec_loc_warning:0 "£trigger_tec_warning£"
 
+	tec_loc_feature_not_ready:0 "§R£trigger_tec_warning_red£ Feature not ready§!"
+
 	tec_loc_energy:0 "$tec_loc_energy_icon$ Energy"
 	tec_loc_energy_icon:0 "£energy£"
 	tec_loc_minerals:0 "$tec_loc_minerals_icon$ Minerals"
@@ -192,6 +194,8 @@
 	tec_loc_building:0 "£building£ Building"
 	tec_loc_building_plural:0 "£building£ Buildings"
 	tec_loc_building_icon:0 "£building£"
+	tec_loc_capital:0 "£building£ Planetary Capital"
+	tec_loc_capitals:0 "$tec_loc_capital$s"
 	tec_loc_planet_capital:0 "£building£ Planet Capital"
 	tec_loc_planet_capitals:0 "£building£ Planetary Capitals"
 	tec_loc_planetary_capital:0 "$tec_loc_planet_capital$"
