--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -812,11 +812,23 @@
 	tr_tec_bioware_finish_tooltip:4 "TO DO.\n$TRADITIONS_FINISH_AP$"
 
 	tr_tec_bioware_1:0 "REPLACE_ME"
+	tr_tec_bioware_1_delayed:0 "REPLACE_ME"
+	tr_tec_bioware_1_tooltip:0 "REPLACE_ME"
 	tr_tec_bioware_2:0 "REPLACE_ME"
+	tr_tec_bioware_2_delayed:0 "REPLACE_ME"
+	tr_tec_bioware_2_tooltip:0 "REPLACE_ME"
 	tr_tec_bioware_3:0 "REPLACE_ME"
+	tr_tec_bioware_3_delayed:0 "REPLACE_ME"
+	tr_tec_bioware_3_tooltip:0 "REPLACE_ME"
 	tr_tec_bioware_4:0 "REPLACE_ME"
+	tr_tec_bioware_4_delayed:0 "REPLACE_ME"
+	tr_tec_bioware_4_tooltip:0 "REPLACE_ME"
 	tr_tec_bioware_5:0 "REPLACE_ME"
+	tr_tec_bioware_5_delayed:0 "REPLACE_ME"
+	tr_tec_bioware_5_tooltip:0 "REPLACE_ME"
 	tr_tec_bioware_6:0 "REPLACE_ME"
+	tr_tec_bioware_6_delayed:0 "REPLACE_ME"
+	tr_tec_bioware_6_tooltip:0 "REPLACE_ME"
  # /
 
  # Psychic Prowess (B)
