M-AGE # 25- UNSTABLE - Path changes implementation 7 + subhabitat changes + more

--- a/localisation/english/replace/zz_evolved_ascension_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_l_english.yml
@@ -83,6 +83,51 @@
 	concept_tec_trait_cyberpsychic_help_icon:0 "£trigger_tec_question£"
 	concept_tec_trait_cyberpsychic_desc:0 "TODO ASCENSION"
  # /
+
+ # Cybernetics
+	concept_tec_cybernetic_augment:0 "$tec_cybernetic_augments$"
+	concept_tec_cybernetic_augment_icon:0 "£text_tec_cyborg_icon£"
+	concept_tec_cybernetic_augment_trait:0 "$tec_cybernetic_augmentation$"
+	concept_tec_cybernetic_augment_desc:0 "$tec_cybernetic_augments_desc$"
+
+	concept_tec_cybernetic_augment_cat_mainframe:0 "$tec_cybernetic_augments_cat_mainframe$"
+	concept_tec_cybernetic_augment_cat_mainframe_icon:0 "£text_tec_cyborg_icon£"
+	concept_tec_cybernetic_augment_cat_mainframe_trait:0 "$tec_cybernetic_augmentation_mainframe$"
+	concept_tec_cybernetic_augment_cat_mainframe_trait_advanced:0 "$tec_advanced_augmentation_mainframe$"
+	concept_tec_cybernetic_augment_cat_mainframe_desc:0 "$tec_cybernetic_augments_cat_mainframe_desc$"
+	concept_tec_cybernetic_augment_cat_cortex:0 "$tec_cybernetic_augments_cat_cortex$"
+	concept_tec_cybernetic_augment_cat_cortex_icon:0 "£text_tec_cyborg_icon£"
+	concept_tec_cybernetic_augment_cat_cortex_trait:0 "$tec_cybernetic_augmentation_cortex$"
+	concept_tec_cybernetic_augment_cat_cortex_trait_advanced:0 "$tec_advanced_augmentation_cortex$"
+	concept_tec_cybernetic_augment_cat_cortex_desc:0 "$tec_cybernetic_augments_cat_cortex_desc$"
+	concept_tec_cybernetic_augment_cat_internal:0 "$tec_cybernetic_augments_cat_internal$"
+	concept_tec_cybernetic_augment_cat_internal_icon:0 "£text_tec_cyborg_icon£"
+	concept_tec_cybernetic_augment_cat_internal_trait:0 "$tec_cybernetic_augmentation_internal$"
+	concept_tec_cybernetic_augment_cat_internal_trait_advanced:0 "$tec_advanced_augmentation_internal$"
+	concept_tec_cybernetic_augment_cat_internal_desc:0 "$tec_cybernetic_augments_cat_internal_desc$"
+	concept_tec_cybernetic_augment_cat_external:0 "$tec_cybernetic_augments_cat_external$"
+	concept_tec_cybernetic_augment_cat_external_icon:0 "£text_tec_cyborg_icon£"
+	concept_tec_cybernetic_augment_cat_external_trait:0 "$tec_cybernetic_augmentation_external$"
+	concept_tec_cybernetic_augment_cat_external_trait_advanced:0 "$tec_advanced_augmentation_external$"
+	concept_tec_cybernetic_augment_cat_external_desc:0 "$tec_cybernetic_augments_cat_external_desc$"
+	concept_tec_cybernetic_augment_cat_deck:0 "$tec_cybernetic_augments_cat_deck$"
+	concept_tec_cybernetic_augment_cat_deck_icon:0 "£text_tec_cyborg_icon£"
+	concept_tec_cybernetic_augment_cat_deck_trait:0 "$tec_cybernetic_augmentation_deck$"
+	concept_tec_cybernetic_augment_cat_deck_trait_advanced:0 "$tec_advanced_augmentation_deck$"
+	concept_tec_cybernetic_augment_cat_deck_desc:0 "$tec_cybernetic_augments_cat_deck_desc$"
+
+	concept_tec_cybernetic_augment_cat_unregulated:0 "$tec_cybernetic_augments_cat_unregulated$"
+	concept_tec_cybernetic_augment_cat_unregulated_icon:0 "£text_tec_cyborg_icon£"
+	concept_tec_cybernetic_augment_cat_unregulated_trait:0 "$tec_unregulated_augmentation_deck$"
+	concept_tec_cybernetic_augment_cat_unregulated_trait_advanced:0 "$tec_unregulated_augmentation_deck$"
+	concept_tec_cybernetic_augment_cat_unregulated_desc:0 "$tec_cybernetic_augments_cat_unregulated_desc$"
+	concept_tec_cybernetic_augment_cat_reclaimed:0 "$tec_cybernetic_augments_cat_reclaimed$"
+	concept_tec_cybernetic_augment_cat_reclaimed_icon:0 "£text_tec_cyborg_icon£"
+	concept_tec_cybernetic_augment_cat_reclaimed_trait:0 "$tec_reclaimed_augmentation_deck$"
+	concept_tec_cybernetic_augment_cat_reclaimed_trait_advanced:0 "$tec_reclaimed_augmentation_deck$"
+	concept_tec_cybernetic_augment_cat_reclaimed_desc:0 "$tec_cybernetic_augments_cat_reclaimed_desc$"
+ # /
+
  # District Concepts
  concept_tec_hive_world_ascension_district:0 "TODO ASCENSION"
  concept_tec_hive_world_ascension_district_help_icon:0 "£trigger_tec_question£"
@@ -115,7 +160,16 @@
 	tec_situation_slower_notech_machines:0 "$tec_situation_slower_notech_synthetics_machine$"
 	tec_situation_slower_notech_mystical:0 "Not having both the §Y£society£ $tech_psionic_theory$§ and §Y£society£ $tech_telepathy$§ technologies researched is §RSlowing§! this situation."
 
-	tec_advanced_ascensions_unlocked:0 "TODO ASCENSION"
+	tec_advanced_ascensions_unlocked_generic:0 "TODO ASCENSION"
+	tec_advanced_ascensions_unlocked_genetics:0 "$tec_advanced_ascensions_unlocked_generic$\nTODO ASCENSION"
+	tec_advanced_ascensions_unlocked_biogenics:0 "$tec_advanced_ascensions_unlocked_generic$\nTODO ASCENSION"
+	tec_advanced_ascensions_unlocked_cybernetics:0 "$tec_advanced_ascensions_unlocked_generic$\nTODO ASCENSION"
+	tec_advanced_ascensions_unlocked_bioware:0 "$tec_advanced_ascensions_unlocked_generic$\nTODO ASCENSION"
+	tec_advanced_ascensions_unlocked_psionics:0 "$tec_advanced_ascensions_unlocked_generic$\nTODO ASCENSION"
+	tec_advanced_ascensions_unlocked_psychics:0 "$tec_advanced_ascensions_unlocked_generic$\nTODO ASCENSION"
+	tec_advanced_ascensions_unlocked_ethereal:0 "$tec_advanced_ascensions_unlocked_generic$\nTODO ASCENSION"
+	tec_advanced_ascensions_unlocked_synthetics:0 "$tec_advanced_ascensions_unlocked_generic$\nTODO ASCENSION"
+	tec_advanced_ascensions_unlocked_digital:0 "$tec_advanced_ascensions_unlocked_generic$\nTODO ASCENSION"
 
  # /
 # /
