--- a/localisation/english/replace/zz_evolved_ascension_z_old_l_english.yml
+++ b/localisation/english/replace/zz_evolved_ascension_z_old_l_english.yml
@@ -92,6 +92,14 @@
 
 # Cybernetic
 	# Old text
+		#old_tec_cybernetic_path.105.name:0 "The Flesh is Weak"
+		#old_tec_cybernetic_path.105.desc:0 "The cybernetic conversion process has been completed! All of our citizens have now been equipped with neural implants and basic cybernetic suites. The infrastructure is also in place to gradually modify any new citizens that are born within our nation, so that they can experience all the benefits of technology from an early age.\n\nHenceforth, our species shall be known as the §H[Root.GetSpeciesNamePlural]§!!"
+		#old_tec_cybernetic_path.105.desc.hive:0 "The cybernetic conversion process has been completed! All of our drones have now been equipped with advanced neural implants and cybernetic suites. The infrastructure is also in place to gradually modify any new drones that are procreated within our collective, so that they will connected to the collective from an early age.\n\nHenceforth, our species shall be known as the §H[Root.GetSpeciesNamePlural]§!!"
+		#old_tec_cybernetic_path.105.desc.cyborg:0 "The cybernetic upgrade process has been completed; All of our citizens have better cybernetic implants and are working at increased efficiency. We will now be able to further amplify our capacities, our potential, our growth, using the state of the art technology within our own bodies."
+		#old_tec_cybernetic_path.105.desc.cyborg.gestalt:0 "The cybernetic conversion process has been completed! All of our cyborgs are now upgraded and are ready to serve the collective in a faster, better, stronger way.\n\nWe will, still, attempt to further enhance our cybernetics, as obsolescence is futile."
+		#old_tec_cybernetic_path.105.a:0 "It is the dawn of a new era."
+		#old_tec_cybernetic_path.105.a.tooltip:0 "$ASSIMILATION_CITIZENSHIP_ENABLED$ §YCyborgs§!.\nThe §Y$tradition_cybernetics$§! tradition is now unlocked."
+
 		#tec_cybernetic_path.10010.name:0 "Modular Invention"
 		#tec_cybernetic_path.10010.desc:0 "The search of improvement and upgrades needs also a constant improvement and upgrade, as a linear path only leads to a singular element, while different approaches can lead to better understanding of our cybernetics. Thereby, we can invest more resources in a way to reduce times required for researching the implants, or we can continue with a standard and diverse approach."
 		#tec_cybernetic_path.10010.a:0 "Proceed with a Standard approach"
