--- a/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
+++ b/localisation/english/replace/zz_evolved_districts_and_features_l_english.yml
@@ -1032,6 +1032,7 @@ l_english:
 	district_tec_hab_logistic_plural:0 "$district_tec_hab_extraction$s"
 	district_tec_hab_logistic_desc:0 "Large sections of the central orbital habitat are repurposed to coordinate the sub-orbitals and mining stations around the system, increasing their efficiency and allowing a proper transmission of manpower and resources amongsts each one."
 	district_tec_hab_logistic_effect:0 "This $tec_loc_district$ provide jobs that increase the system's §YMegastructure§! resource yield.\n\n§Y$tec_loc_warning$ Only productive megastructures, which produce direct resources, benefit from this effect.§!"
+	district_tec_hab_logistic_effect_subhabitats:0 "\n§HCurrent Subhabitats:§![solar_system.tec_get_built_subhabitats]/3 $TABBED_NEW_LINE$ $tec_loc_energy_icon$ §Y[solar_system.tec_get_built_subhabitats_energy]§! $TABBED_NEW_LINE$ $tec_loc_minerals_icon$ §Y[solar_system.tec_get_built_subhabitats_minerals]§! $TABBED_NEW_LINE$ $tec_loc_food_icon$ §Y[solar_system.tec_get_built_subhabitats_food]/[solar_system.tec_get_max_subhabitats_food] $TABBED_NEW_LINE$ $tec_loc_research_resources_icon$ §Y[solar_system.tec_get_built_subhabitats_science]§! §!\n\n"
 
 	# Old habitat districts
 	district_tec_hab_extraction:0 "Orbital Extraction District"
@@ -1041,7 +1042,7 @@ l_english:
 	district_tec_hab_extraction_effect_buildings:0 ""
 	#$t$- Increases the effects of §Y£building£ Habitat Orbital Buildings§!."
 	district_tec_hab_extraction_effect_swap:0 "$t$- Replaceable via §Y$tec_loc_planet_decision$§!."
-	district_tec_hab_extraction_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
+	district_tec_hab_extraction_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!"
 
 	district_tec_hab_extraction_no_energy:0 "§Y$tec_loc_c_warning$ - $tec_loc_energy$ passive production has been redirected to $district_hab_energy$s§!."
 	district_tec_hab_extraction_no_minerals:0 "§Y$tec_loc_c_warning$ - $tec_loc_minerals$ passive production has been redirected to $district_hab_mining$s§!."
@@ -1051,10 +1052,12 @@ l_english:
 	district_hab_energy_effect_production:0 "This $tec_loc_district$ jobs and bound Orbitals increase the §Y$tec_loc_energy$§! production of §YSubhabitats§! of its type (£energy£)"
 	district_hab_energy_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Energy Orbital Buildings§!."
 	district_hab_energy_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_energy$ §Y[solar_system.GetNumOrbitalsEnergy]/[solar_system.GetMaxOrbitalsEnergy]§!\n\n"
+	district_hab_energy_effect_subhabitats:0 "§HCurrent Subhabitats:§! $TABBED_NEW_LINE$ $tec_loc_energy_icon$ §Y[solar_system.tec_get_built_subhabitats_energy]/[solar_system.tec_get_built_subhabitats]§! (built)\n\n"
 	# Minerals
 	district_hab_mining_effect_production:0 "This $tec_loc_district$ jobs and bound Orbitals increase the §Y$tec_loc_minerals$§! production of §YSubhabitats§! of its type (£minerals£)"
 	district_hab_mining_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Minerals Orbital Buildings§!."
 	district_hab_mining_effect_orbitals:0 "\n§HCurrent Orbitals:§! $TABBED_NEW_LINE$ $tec_loc_minerals$ §Y[solar_system.GetNumOrbitalsMining]/[solar_system.GetMaxOrbitalsMining]§!\n\n"
+	district_hab_mining_effect_subhabitats:0 "§HCurrent Subhabitats:§! $TABBED_NEW_LINE$ $tec_loc_minerals_icon$ §Y[solar_system.tec_get_built_subhabitats_minerals]/[solar_system.tec_get_built_subhabitats]§! (built)\n\n"
 	# Food
 	district_tec_hab_food:0 "Hydroponic District"
 	district_tec_hab_food_plural:0 "Hydroponic Districts"
@@ -1062,7 +1065,9 @@ l_english:
 	# \n\nDue to the special requirements this district needs, it's only possible to obtain when the habitat is built §Yorbiting§! a resourceless §YGas giant§! or §YFrozen planet§!."
 	district_tec_hab_food_effect_production:0 "This $tec_loc_district$ jobs increase the §Y$tec_loc_food$§! production of §YSubhabitats§! of its type (£food£)"
 	district_tec_hab_food_effect_buildings:0 "$t$- Increases the effects of §Y£building£ Food Orbital Buildings§!."
-	district_tec_hab_food_effect_orbitals:0 "\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
+	district_tec_hab_food_effect_orbitals:0 ""
+	district_tec_hab_food_effect_subhabitats:0 "§HCurrent Subhabitats:§! $TABBED_NEW_LINE$ $tec_loc_minerals_icon$ §Y[tec_get_built_subhabitats_food]/[tec_get_max_subhabitats_food]§! (max) (§Y[solar_system.tec_get_built_subhabitats]§! built)\n\n"
+	#"\n§HCurrent Hydroponic Boost:§! $TABBED_NEW_LINE$ $tec_loc_food$ +§Y[this.GetHydroponicNumbers]§!\n\n"
 
 	# Utility
 	district_tec_hab_utility:0 "Utility District"
