--- a/localisation/english/replace/zz_evolved_traits_l_english.yml
+++ b/localisation/english/replace/zz_evolved_traits_l_english.yml
@@ -1073,6 +1073,11 @@
 	tec_cybernetic_augments_cat_deck:0 "OS Deck Augmentation"
 	tec_cybernetic_augments_cat_deck_desc:0 "Dedicated software and hardware interconnecting other cybernetic implants ensure efficiency or change in operativity."
 
+	tec_cybernetic_augments_cat_unregulated:0 "Unregulated Augmentation"
+	tec_cybernetic_augments_cat_unregulated_desc:0 "TODO ASCENSION"
+	tec_cybernetic_augments_cat_reclaimed:0 "Reclaimed Augmentation"
+	tec_cybernetic_augments_cat_reclaimed_desc:0 "TODO ASCENSION"
+
 	tec_cybernetic_augmentation:0 "§CCybernetic Augmentation§!"
 	tec_cybernetic_augmentation_mainframe:0 "§CCybernetic Augmentation - Mainframe§!"
 	tec_cybernetic_augmentation_cortex:0 "§CCybernetic Augmentation - Cortex§!"
