--- a/localisation/english/zz_evolved_edict_policies_l_english.yml
+++ b/localisation/english/zz_evolved_edict_policies_l_english.yml
@@ -24,6 +24,7 @@
 
 		council_agenda_agenda_tec_assembly_robots_provide_robot_techs:0 "Provide the next £engineering£ §YRobotic§! Technology"
 	council_agenda_agenda_tec_assembly_robots_provide_powered_tech:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons$§!: §G+$@agenda_award_tech_progress|0%$§!"
+	council_agenda_agenda_tec_assembly_robots_provide_powered_tech_machine:0 "Progress towards £engineering£§Y$tech_powered_exoskeletons_machine_intelligence$§!: §G+$@agenda_award_tech_progress|0%$§!"
 	council_agenda_agenda_tec_assembly_robots_provide_workers_tech:0 "Progress towards £engineering£§Y$tech_robotic_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
 	council_agenda_agenda_tec_assembly_robots_provide_droids_tech:0 "Progress towards £engineering£§Y$tech_droid_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
 	council_agenda_agenda_tec_assembly_robots_provide_synth_tech:0 "Progress towards £engineering£§Y$tech_synthetic_workers$§!: §G+$@agenda_award_tech_progress|0%$§!"
